# Cloth_Sim

./: .gitignore  CMakeLists.txt  Cloth.h  Common.h  Grid.h  Point.h  README.md  Spring.h  draw_points.m  force.h  integrate.h  main.cpp
frame_data/: failed.txt  grav_only.txt  test.txt
